syntax = "proto3";

package notif;

import "google/protobuf/empty.proto";

message FriendUpdate { string sender = 1; }

message GameInvite {
  string sender = 1;
  string lobbyid = 2;
}

message StatusUpdate {
  string status = 1;
  string option = 2;
}

message NotificationMessage {
  oneof payload {
    FriendUpdate friendUpdate = 1;
    GameInvite gameInvite = 2;
    StatusUpdate statusUpdate = 3;
  }
}